# jepa-lnn

./: .gitignore  AGENTS.md  Makefile  README.md  TODO.md  pyproject.toml
configs/: h200-decoder.yaml  h200-lewm-official.yaml  h200-pilot.yaml  h200-screen.yaml  h200.yaml  local.yaml
docs/: DECODER.md  EXPERIMENT_INPUTS.md  EXPERIMENT_PROTOCOL.md  SCREENING_PROTOCOL.md
src/lewm_liquid_predictors/: __init__.py  artifacts.py  cli.py
src/lewm_liquid_predictors/data/: __init__.py  preprocessing.py  pusht.py  screening.py  splits.py  trajectories.py
src/lewm_liquid_predictors/decoder/: __init__.py  checkpoint.py  config.py  galleries.py  model.py  training.py  workflows.py
src/lewm_liquid_predictors/evaluation/: __init__.py  held_out.py  retrieval.py  rollout.py
src/lewm_liquid_predictors/models/: __init__.py  encoder.py  factory.py  lewm.py  liquid.py  mlp.py  protocol.py  rollout.py  smoke_encoder.py  system.py  transformer.py  upstream_encoder.py
src/lewm_liquid_predictors/models/checkpoint_adapters/: __init__.py  lewm.py
src/lewm_liquid_predictors/training/: __init__.py  lewm_trainer.py  loop.py  provenance.py
src/lewm_liquid_predictors/utils/: __init__.py  config.py
tests/: test_artifacts.py  test_cli.py  test_config.py  test_decoded_galleries.py  test_decoder.py  test_decoder_checkpoint.py  test_decoder_config.py  test_encoder.py  test_evaluation.py  test_evaluation_metrics.py  test_factory.py  test_lewm.py  test_lewm_checkpoint.py  test_lewm_trainer.py  test_liquid.py  test_mlp.py  test_package.py  test_preprocessing.py  test_provenance.py  test_pusht.py  test_retrieval.py  test_screening_data.py  test_splits.py  test_system.py  test_training.py  test_trajectories.py  test_transformer.py
